# httpit

./: .gitignore  BUILD_GUIDE.md  Dockerfile.build  Dockerfile.multiarch  INSTALL  MANIFEST.in  PUBLISHING.md  README.md  build_and_publish.sh  build_webfsd.py  demo_server.py  docker_build.sh  ls.c  main.py  pyproject.toml  setup.py  test_uv_build.sh  webfsd.c  webfsd.man  webfsd_lib.c  webfsd_module.c  webfsd_python.c
.github/workflows/: build-and-publish.yml  publish.yml  release.yml  test.yml  wheels.yml
fasthttp/: __init__.py  __main__.py  embedded.py  server.py
mk/: Autoconf.mk  Compile.mk
