[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fasthttp"
version = "1.21.0"
description = "Ultra-fast lightweight HTTP server"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL-2.0"}
authors = [
    {name = "Gerd Knorr (original), Python wrapper contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.urls]
Homepage = "https://github.com/yourusername/fasthttp"
Repository = "https://github.com/yourusername/fasthttp"

[project.scripts]
fasthttp = "fasthttp.__main__:main"

[tool.setuptools.packages.find]
include = ["fasthttp*"]
